--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,14 @@ install:
   - sudo apt-get -qq update
   - sudo apt-get -qq install git devscripts shunit2 openssh-client openssh-server
 
+# Setup SSH infrastructure necessary to run tests
+before_script:
+  - scripts/ci-setup-ssh.sh
+
 # Install externals and build
 script:
   - checkbashisms xeno
+  - shunit2 scripts/ci-test-xeno.sh
 
 # Send notifications
 notifications:
