--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_script:
 script:
   - checkbashisms xeno
   - shunit2 scripts/ci-test-xeno.sh
+  - shunit2 scripts/ci-test-xeno-config.sh
 
 # Send notifications
 notifications:
