Added daemon unit test.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ script:
   - checkbashisms xeno
   - shunit2 scripts/ci-test-xeno.sh
   - shunit2 scripts/ci-test-xeno-config.sh
+  - shunit2 scripts/ci-test-xeno-daemon.sh
 
 # Send notifications
 notifications:
